[gd_scene load_steps=3 format=3 uid="uid://cotd4a3fextts"]

[ext_resource type="Script" uid="uid://b601dfi0xce1b" path="res://scenes/craft/craft_build_button.gd" id="1_rxo62"]
[ext_resource type="Texture2D" uid="uid://bda2epf7bl3m2" path="res://assets/ui/ui_backpack_build.png" id="2_2kitd"]

[node name="CraftBuildButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1821.0
offset_bottom = -979.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxo62")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.12, 1.12)
texture = ExtResource("2_2kitd")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
